[package]
name = "ena"
version = "0.5.0"
authors = ["shiimizu <shiimizu@protonmail.com>"]
edition = "2018"
description = "Lightweight 4chan thread and board archiver"
documentation = "https://github.com/shiimizu/ena"
homepage = "https://github.com/shiimizu/ena"
repository = "https://github.com/shiimizu/ena"
license = "MIT"
readme = "readme.md"
keywords = ["4chan", "archiver", "scraper", "crawler"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
chrono = "0.4"
pretty_env_logger = "0.4"
log = "0.4"
ctrlc = { version = "3.1", features = ["termination"] }
anyhow = "1.0"
sha2 = "0.8"
enum-iterator = "0.6"

# Async
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
tokio = { version = "0.2", default-features = false, features = ["rt-threaded", "time", "io-driver", "sync"] }
reqwest = { version = "0.10", default-features = false }
tokio-postgres = { version = "0.5", features = ["with-serde_json-1"] }
mysql_async = "0.22"
