[package]
name = "ena"
version = "0.5.0"
authors = ["shiimizu <shiimizu@protonmail.com>"]
edition = "2018"
description = "An ultra-low resource imageboard archiver"
repository = "https://github.com/shiimizu/ena"
license = "MIT"
readme = "readme.md"
keywords = ["4chan", "archiver", "scraper", "crawler"]
categories = ["command-line-utilities"]
build = "src/build.rs"
	
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "ena"
path = "src/main.rs"

[lib]
name = "ena"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
chrono = "0.4"
pretty_env_logger = "0.4"
log = "0.4"
ctrlc = { version = "3.1", features = ["termination"] }
anyhow = "1.0"
sha2 = "0.8"
enum-iterator = "0.6"
percent-encoding = "2.1"

# Async
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
futures-intrusive = "0.3"
tokio = { version = "0.2", default-features = false, features = ["rt-threaded", "macros", "time", "io-driver", "sync"] }
reqwest = { version = "0.10", default-features = false }
tokio-postgres = { version = "0.5", features = ["with-serde_json-1"] }
mysql_async = "0.22"
mysql_common = "0.20"

[build-dependencies]
vergen = "3"

[dev-dependencies]
pretty_assertions = "0.6"
once_cell = "1.3"

