[package]
name = "ena"
version = "0.8.0-dev"
description = "An ultra-low resource imageboard archiver"
authors = ["shiimizu <shiimizu@protonmail.com>"]
repository = "https://github.com/shiimizu/ena"
edition = "2018"
license = "MIT"
readme = "README.md"
keywords = ["4chan", "archiver", "scraper", "crawler"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.

[profile.dev.package.backtrace]
opt-level = 3

# Temporary
[features]
default = ["native-tls/vendored"]


[dependencies]

# Async
futures = "0.3"
futures-lite = { git = "https://github.com/stjepang/futures-lite.git" }
futures-intrusive = "0.3"
async-trait = "0.1"
smol = { git = "https://github.com/stjepang/smol", features = ["tokio02"] }
reqwest = { version = "0.10", default-features = false, features = ["rustls-tls", "json", "stream", "gzip", "brotli", "socks"] }
async-rwlock = "1"
async-process = "0.1"
# async-std = { version = "1.6", default-features = false, features = ["std"] } # Literally only for RwLock

# Database
tokio-postgres = { version = "0.5", features = ["with-serde_json-1"] }
postgres-types = { version = "0.1", features = [ "derive"] }
# mysql_common = "0.22"
mysql_async = { git = "https://github.com/blackbeam/mysql_async" }
native-tls = "0.2" # Temporary

# Configuration serialization/deserialization
structopt = { version = "0.3", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.8"

# Tools
url = { version = "2", features = ["serde"] }
fomat-macros = "0.3"
color-eyre  = { git = "https://github.com/yaahc/color-eyre" }
strum = "0.19"
strum_macros = "0.19"
itertools = "0.9"
base64 = "0.12"
chrono = "0.4"
chrono-tz = "0.5"

# Systems related
once_cell = "1.4"
num_cpus = "1"
ctrlc = { version = "3", features = ["termination"] }
# time = "0.2"

# Text processing
html-escape = "0.2"
ammonia = "3.1"
regex = "1"
format-sql-query = "0.4"

# Media
md-5 = "0.9"
sha2 = "0.9"

[dev-dependencies]
pretty_assertions = "0.6"
